Fix styles after rebase

--- a/docs/docs/how-to/logging/log-context.mdx
+++ b/docs/docs/how-to/logging/log-context.mdx
@@ -6,7 +6,7 @@ title: Use context with logs
 import { CodeBlock } from '../../components.jsx';
 import Handler from "!!raw-loader!./src/log-context/handler.go";
 
-The [go Context](https://pkg.go.dev/context) carries data from the moment the server receives an inbound request to the moment the server makes an outbound request. This means you can use it to propagate data between services and processes. With gosoline, you can use log functions to store data from the request lifecycle in the Context and attach that data to logs to provide more details.
+The [go Context](https://pkg.go.dev/context) carries data from the moment the server receives an inbound request to the moment the server makes an outbound request. This means you can use it to propagate data between services and processes. With Gosoline, you can use log functions to store data from the request lifecycle in the Context and attach that data to logs to provide more details.
 
 In this guide, you'll add some logs to a CRUD server used for managing a "To do list".
 
@@ -27,9 +27,9 @@ git clone https://github.com/justtrackio/gosoline.git
 cp -R gosoline/docs/docs/quickstart/http-server/src/write-crud-sql-app crud-app
 ```
 
-## Truncate todo text
+## Truncate `Todo` text
 
-With this service, users can create, read, update, and delete todos. For the purposes of this tutorial, you'll add some new logic. Instead of accepting any text for a todo, you'll limit the length of that string to prevent users from posting huge amounts of text in their todos.
+With this service, users can create, read, update, and delete `todo` objects. For the purposes of this tutorial, you'll add some new logic. Instead of accepting any text for a `todo`, you'll limit the length of that string to prevent users from posting huge amounts of text in their `todo` objects.
 
 In `handler.go`, add a new function:
 
@@ -40,7 +40,7 @@ In this function, you:
 1. Accept a `Context` and a string as arguments
 2. Capture the length of the string
 3. Mutate the `Context` to store the original length of the string
-4. Truncate the string if it is longer than 50 runes.
+4. Truncate the string if it's longer than 50 runes.
 5. Return the potentially truncated string
 
 For this tutorial, the important thing to pay attention to is where you mutate the `Context`: 
@@ -51,7 +51,7 @@ log.MutateContextFields(ctx, map[string]any{
 })
 ```
 
-With Gosoline, you can initilize specific fields that you can use with a `Logger`. (You'll do this in the next step.) Once those fields are initialized, you can append or mutate the fields as you've done here.
+With Gosoline, you can initialize specific fields that you can use with a `Logger`. (You'll do this in the next step.) Once those fields are initialized, you can append or mutate the fields as you've done here.
 
 :::info
 
@@ -61,7 +61,7 @@ Read more about appending and mutating context fields in our [log package refere
 
 ## Use your new function
 
-Now that you have a function that can truncate todo text, use it in `TransformCreate()`:
+Now that you have a function that can truncate `todo` text, use it in `TransformCreate()`:
 
 <CodeBlock title="handler.go" language="go" snippet="transform create">{Handler}</CodeBlock>
 
@@ -71,16 +71,16 @@ Then, use it in `TransformUpdate()`:
 
 Here, you first call `log.InitContext()`. This function creates two sets of log-related fields in the `Context`:
 
-- `localFields`: These fields are limited to the application in which they are set. They are not propagated to downstream services in any way.
-- `globalFields`: These fields aren't limited to the application in which they are set. They are propagated to downstream services.
+- `localFields`: These fields are limited to the application in which they're set. They're not propagated to downstream services in any way.
+- `globalFields`: These fields aren't limited to the application in which they're set. They're propagated to downstream services.
 
 Then, it returns a `Context` in which these local and global fields are mutable. You pass this `Context` as the first parameter to `truncate()`.
 
 :::info Technical Detail
 
-Actually, this call to `log.InitContext()` is not required because gosoline will have already initialized the `Context` earlier in the request lifecycle. In this case, the `ctx` you pass to `log.InitContext()` is returned, unchanged. Therefore, `localctx` and `ctx` are the same, so you could have passed `ctx` to `truncate()` instead.
+Actually, this call to `log.InitContext()` isn't required because Gosoline will have already initialized the `Context` earlier in the request lifecycle. In this case, the `ctx` you pass to `log.InitContext()` is returned, unchanged. Therefore, `localctx` and `ctx` are the same, so you could have passed `ctx` to `truncate()` instead.
 
-However, this example illustrates where to call `log.InitContext()` if you were to create or receive a `Context` from somewhere else. If you initialized the `Context` inside `truncate()`, the log-related fields would go out of scope when the function returns. Instead, you initilize the `Context` and pass it in, so you can make use of the log-related fields later.
+However, this example illustrates where to call `log.InitContext()` if you were to create or receive a `Context` from somewhere else. If you initialized the `Context` inside `truncate()`, the log-related fields would go out of scope when the function returns. Instead, you initialize the `Context` and pass it in, so you can make use of the log-related fields later.
 
 :::
 
@@ -94,7 +94,7 @@ First, add a logger to your `TodoCrudHandlerV0`:
 
 Now, you can make use of this logger in any of the handler's methods.
 
-Next, when you initilize the handler, pass a logger:
+Next, when you initialize the handler, pass a logger:
 
 <CodeBlock title="handler.go" language="go" snippet="new todo crud handler">{Handler}</CodeBlock>
 
@@ -141,13 +141,13 @@ You'll see logs of your server running.
 
 ### Make requests
 
-Finally, in a third shell, make requests to your service. For example, create a todo:
+Finally, in a third shell, make requests to your service. For example, create a `todo`:
 
 ```shell
 curl -d '{"text":"do it!", "dueDate":"2023-09-08T15:00:00Z"}' -H "Content-Type: application/json" -X POST localhost:8080/v0/todo
 ```
 
-Update the todo:
+Update the `todo`:
 
 ```shell
 curl -d '{"text":"do it!!!"}' -H "Content-Type: application/json" -X PUT localhost:8080/v0/todo/1
