fixtures: refactored fixture loading process

--- a/docs/docs/quickstart/testing/test-your-http-server.mdx
+++ b/docs/docs/quickstart/testing/test-your-http-server.mdx
@@ -86,9 +86,9 @@ At the top of `fixtures.go`, you declared the package and imported a dependency:
 
 Here, you declared the package as `main`. Then, you imported one gosoline dependency, `fixtures`.
 
-### Create a fixture set
+### Create named fixtures
 
-Next, you created a fixture set for your current exchange data:
+Next, you created named fixtures for your current exchange data:
 
 <CodeBlock title="fixtures.go" language="go" snippet="fixture set">{Fixtures}</CodeBlock>
 
