--- a/docs/docs/reference/package-fixtures.mdx
+++ b/docs/docs/reference/package-fixtures.mdx
@@ -14,44 +14,86 @@ fixtures:
 ```
 * Make sure to use a custom build tag named `fixtures`
 
-* Define your fixtures in code while using one of the built in `FixtureWriterFactory` and defining a slice of `[]fixtures.FixtureSet{}`.
+* Define your fixtures in code while using one of the built in `FixtureWriter`s and defining a slice of `[]fixtures.FixtureSet{}` or use `fixtures.FixtureSetFactory` or `fixtures.FixtureSetsFactory` depending on your use-case.
 For more details check the `/examples/gosoline-fixture-loading` Directory or read the short example below.
 
-* The `fixtures.FixtureSet{}` has the following definition:
+* The `fixtures.FixtureSet` interface allows you to define any custom implementation for writing fixture sets to their destination and take control of purging prior writing too.
+You can however use the `fixures.simpleFixtureSet` via the `fixtures.NewSimpleFixtureSet` factory func to use a simple yet effective and prebuilt solution.
+This is the simpleFixtureSet struct definition:
 ```
-type FixtureSet struct {
+type simpleFixtureSet[T any] struct {
 	Enabled  bool
 	Purge    bool
-	Writer   FixtureWriterFactory
-	Fixtures []interface{}
+	Writer   FixtureWriter
+	Fixtures NamedFixtures[T]
 }
 ```
-You can easily define multiple fixtures to different destinations in one file and enable or disable them for each FixtureWriter.
+You can easily define multiple fixtures for different destinations in one file, enable/disable them or even enable/disable purging for each `fixtures.FixtureSet` via the `fixtures.WithEnabled` and `fixtures.WithPurge` `fixtures.FixtureSetOption` for the `fixtures.NewSimpleFixtureSet` func.
 
-* Currently there are 7 different FixtureWriterFactories implemented to load fixtures.
-  * `DynamoDbFixtureWriterFactory`
-  * `DynamoDbKvStoreFixtureWriterFactory`
-  * `MysqlOrmFixtureWriterFactory`
-  * `MysqlPlainFixtureWriterFactory`
-  * `RedisFixtureWriterFactory`
-  * `RedisKvStoreFixtureWriterFactory`
-  * `BlobFixtureWriterFactory`
+* Currently there are 7 different FixtureWriter implementations for loading fixtures:
+<table>
+    <tr>
+        <td>Implementation</td>
+        <td>Direct creation</td>
+        <td>Factory for use with fixtures.NewFixtureSetsFactory</td>
+    </tr>
+    <tr>
+        <td>Blob stores (AWS S3)</td>
+        <td>fixtures.NewBlobFixtureWriter`</td>
+        <td>fixtures.BlobFixtureSetFactory</td>
+    </tr>
+    <tr>
+        <td>AWS DynamoDB</td>
+        <td>fixtures.NewDynamoDbFixtureWriter`</td>
+        <td>fixtures.DynamoDbFixtureSetFactory</td>
+    </tr>
+    <tr>
+        <td>KvStore backed by AWS DynamoDB</td>
+        <td>fixtures.DynamoDbKvStoreFixtureWriterFactory`</td>
+        <td>fixtures.DynamoDbKvStoreFixtureSetFactory</td>
+    </tr>
+    <tr>
+        <td>MySQL (backed by gosoline ORM implementation)</td>
+        <td>fixtures.MysqlOrmFixtureWriterFactory`</td>
+        <td>fixtures.MysqlOrmFixtureSetFactory</td>
+    </tr>
+    <tr>
+        <td>MySQL (plain columns/values)</td>
+        <td>fixtures.MysqlPlainFixtureWriterFactory`</td>
+        <td>fixtures.MysqlPlainFixtureSetFactory</td>
+    </tr>
+    <tr>
+        <td>MySQL (sqlx named prepared statements)</td>
+        <td>fixtures.NewMysqlSqlxFixtureWriter`</td>
+        <td>fixtures.MysqlSqlxFixtureSetFactory</td>
+    </tr>
+    <tr>
+        <td>Redis</td>
+        <td>fixtures.NewRedisFixtureWriter`</td>
+        <td>fixtures.RedisFixtureSetFactory</td>
+    </tr>
+    <tr>
+        <td>KvStore backed by Redis</td>
+        <td>fixtures.NewRedisKvStoreFixtureWriter`</td>
+        <td>fixtures.RedisKvStoreFixtureSetFactory</td>
+    </tr>
+</table>
 
 ## Quick Usage
-* During the creation of your Application make sure to pass the `WithFixtures` option and provide fixtures as an argument of type `[]*fixtures.FixtureSet`
+* During the creation of your Application make sure to pass the `WithFixtureSetsFactory` option and provide a fixture sets factory as an argument of type `fixtures.WithFixtureSetsFactory`
 
 [embedmd]:# (../../examples/fixtures/simple/main.go /func main/ /}/)
 ```go
 func main() {
 	app := application.Default(
-		application.WithFixtureBuilderFactory(fixtures.SimpleFixtureBuilderFactory(fixtureSets)),
+		application.WithFixtureSetFactory(fixtureSetsFactory),
 	)
 
 	app.Run()
 }
 ```
 
-or for example when using the `BlobFixtureWriterFactory`:
+For blob stores (when using the `BlobFixtureWriterFactory`) you need a configuration entry added:
 
 ```yaml
 blob:
@@ -67,7 +109,7 @@ You can also generate a locally unique identifier for your fixtures via `fixture
 ```go
 func main() {
 	app := application.Default(
-		application.WithFixtureBuilderFactory(fixtures.SimpleFixtureBuilderFactory(fixtureSets)),
+		application.WithFixtureSetFactory(fixtureSetsFactory),
 	)
 
 	app.Run()
@@ -75,156 +117,225 @@ func main() {
 
 var autoNumbered = fixtures.NewAutoNumberedFrom(2)
 
-var fixtureSets = []*fixtures.FixtureSet{
-	{
-		Enabled: true,
-		Writer: fixtures.MysqlOrmFixtureWriterFactory(
-			&db_repo.Metadata{
-				ModelId: mdl.ModelId{
-					Name: "orm_fixture_example",
-				},
-			},
-		),
-		Fixtures: []interface{}{
-			&OrmFixtureExample{
+func mysqlOrmFixtureSet(ctx context.Context, config cfg.Config, logger log.Logger) (fixtures.FixtureSet, error) {
+	mysqlMetadata := &db_repo.Metadata{
+		ModelId: mdl.ModelId{
+			Name: "orm_fixture_example",
+		},
+	}
+	mysqlOrmWriter, err := fixtures.NewMysqlOrmFixtureWriter(ctx, config, logger, mysqlMetadata)
+	if err != nil {
+		return nil, fmt.Errorf("failed to initialize mysql orm writer: %w", err)
+	}
+
+	return fixtures.NewSimpleFixtureSet(fixtures.NamedFixtures[OrmFixtureExample]{
+		&fixtures.NamedFixture[OrmFixtureExample]{
+			Name: "foo",
+			Value: OrmFixtureExample{
 				Model: db_repo.Model{
 					Id: autoNumbered.GetNext(),
 				},
 				Name: mdl.Box("example"),
 			},
 		},
-	},
-	{
-		Enabled: true,
-		Writer: fixtures.MysqlPlainFixtureWriterFactory(&fixtures.MysqlPlainMetaData{
-			TableName: "plain_fixture_example",
-			Columns:   []string{"id", "name"},
-		}),
-		Fixtures: []interface{}{
-			fixtures.MysqlPlainFixtureValues{1, "testName1"},
-			fixtures.MysqlPlainFixtureValues{2, "testName2"},
+	}, mysqlOrmWriter), nil
+}
+
+func mysqlPlainFixtureSet(ctx context.Context, config cfg.Config, logger log.Logger) (fixtures.FixtureSet, error) {
+	mysqlPlainWriter, err := fixtures.NewMysqlPlainFixtureWriter(ctx, config, logger, &fixtures.MysqlPlainMetaData{
+		TableName: "plain_fixture_example",
+		Columns:   []string{"id", "name"},
+	})
+	if err != nil {
+		return nil, fmt.Errorf("failed to initialize mysql plain writer: %w", err)
+	}
+
+	return fixtures.NewSimpleFixtureSet(fixtures.NamedFixtures[fixtures.MysqlPlainFixtureValues]{
+		{
+			Name:  "foo2",
+			Value: fixtures.MysqlPlainFixtureValues{1, "testName1"},
 		},
-	},
-	{
-		Enabled: true,
-		Writer: fixtures.DynamoDbKvStoreFixtureWriterFactory[DynamoDbExampleModel](&mdl.ModelId{
-			Project:     "gosoline",
-			Environment: "dev",
-			Family:      "example",
-			Application: "fixture-loader",
-			Name:        "exampleModel",
-		}),
-		Fixtures: []interface{}{
-			&fixtures.KvStoreFixture{
+		{
+			Name:  "foo3",
+			Value: fixtures.MysqlPlainFixtureValues{2, "testName2"},
+		},
+	}, mysqlPlainWriter), nil
+}
+
+func dynamodbKvstoreFixtureSet(ctx context.Context, config cfg.Config, logger log.Logger) (fixtures.FixtureSet, error) {
+	dynamoDbKvStoreWriter, err := fixtures.NewDynamoDbKvStoreFixtureWriter[DynamoDbExampleModel](ctx, config, logger, &mdl.ModelId{
+		Project:     "gosoline",
+		Environment: "dev",
+		Family:      "example",
+		Application: "fixture-loader",
+		Name:        "exampleModel",
+	})
+	if err != nil {
+		return nil, fmt.Errorf("failed to initialize dynamodb kvstore writer: %w", err)
+	}
+
+	return fixtures.NewSimpleFixtureSet(fixtures.NamedFixtures[*fixtures.KvStoreFixture]{
+		{
+			Name: "kv_somekey",
+			Value: &fixtures.KvStoreFixture{
 				Key:   "SomeKey",
 				Value: DynamoDbExampleModel{Name: "Some Name", Value: "Some Value"},
 			},
 		},
-	},
-	{
-		Enabled: true,
-		Purge:   true,
-		Writer:  fixtures.RedisFixtureWriterFactory(aws.String("default"), aws.String(fixtures.RedisOpSet)),
-		Fixtures: []interface{}{
-			&fixtures.RedisFixture{
+	}, dynamoDbKvStoreWriter), nil
+}
+
+func redisFixtureSet(ctx context.Context, config cfg.Config, logger log.Logger) (fixtures.FixtureSet, error) {
+	redisWriter, err := fixtures.NewRedisFixtureWriter(ctx, config, logger, "default", fixtures.RedisOpSet)
+	if err != nil {
+		return nil, fmt.Errorf("failed to initialize redis writer: %w", err)
+	}
+
+	return fixtures.NewSimpleFixtureSet(fixtures.NamedFixtures[*fixtures.RedisFixture]{
+		{
+			Name: "redis_example",
+			Value: &fixtures.RedisFixture{
 				Key:    "example-key",
 				Value:  "bar",
 				Expiry: 1 * time.Hour,
 			},
 		},
-	},
-	{
-		Enabled: true,
-		Writer: fixtures.DynamoDbFixtureWriterFactory(&ddb.Settings{
-			ModelId: mdl.ModelId{
-				Project:     "gosoline",
-				Environment: "dev",
-				Family:      "example",
-				Application: "fixture-loader",
-				Name:        "exampleModel",
-			},
-			Main: ddb.MainSettings{
-				Model: DynamoDbExampleModel{},
-			},
-			Global: []ddb.GlobalSettings{
-				{
-					Name:               "IDX_Name",
-					Model:              DynamoDbExampleModel{},
-					ReadCapacityUnits:  1,
-					WriteCapacityUnits: 1,
-				},
-			},
-		}),
-		Fixtures: []interface{}{
-			&DynamoDbExampleModel{Name: "Some Name", Value: "Some Value"},
+	}, redisWriter), nil
+}
+
+func dynamodbFixtureSet(ctx context.Context, config cfg.Config, logger log.Logger) (fixtures.FixtureSet, error) {
+	dynamodbWriter, err := fixtures.NewDynamoDbFixtureWriter(ctx, config, logger, &ddb.Settings{
+		ModelId: mdl.ModelId{
+			Project:     "gosoline",
+			Environment: "dev",
+			Family:      "example",
+			Application: "fixture-loader",
+			Name:        "exampleModel",
 		},
-	},
-	{
-		Enabled: true,
-		Purge:   false,
-		Writer: fixtures.BlobFixtureWriterFactory(&fixtures.BlobFixturesSettings{
-			ConfigName: "test",
-			BasePath:   "../../test/test_data/s3_fixtures_test_data",
-		}),
-		Fixtures: nil,
-	},
+		Main: ddb.MainSettings{
+			Model: DynamoDbExampleModel{},
+		},
+		Global: []ddb.GlobalSettings{
+			{
+				Name:               "IDX_Name",
+				Model:              DynamoDbExampleModel{},
+				ReadCapacityUnits:  1,
+				WriteCapacityUnits: 1,
+			},
+		},
+	})
+	if err != nil {
+		return nil, fmt.Errorf("failed to initialize dynamodb writer: %w", err)
+	}
+
+	return fixtures.NewSimpleFixtureSet(fixtures.NamedFixtures[*DynamoDbExampleModel]{
+		{
+			Name:  "ddb",
+			Value: &DynamoDbExampleModel{Name: "Some Name", Value: "Some Value"},
+		},
+	}, dynamodbWriter), nil
+}
+
+func blobFixtureSet(ctx context.Context, config cfg.Config, logger log.Logger) (fixtures.FixtureSet, error) {
+	blobWriter, err := fixtures.NewBlobFixtureWriter(ctx, config, logger, &fixtures.BlobFixturesSettings{
+		ConfigName: "test",
+		BasePath:   "../../test/test_data/s3_fixtures_test_data",
+	})
+	if err != nil {
+		return nil, fmt.Errorf("failed to initialize blob writer: %w", err)
+	}
+
+	return fixtures.NewSimpleFixtureSet(fixtures.NamedFixtures[*fixtures.BlobFixture]{}, blobWriter), nil
+}
+
+func fixtureSetsFactory(ctx context.Context, config cfg.Config, logger log.Logger) ([]fixtures.FixtureSet, error) {
+	mysqlOrmFs, err := mysqlOrmFixtureSet(ctx, config, logger)
+	if err != nil {
+		return nil, err
+	}
+
+	mysqlPlainFs, err := mysqlPlainFixtureSet(ctx, config, logger)
+	if err != nil {
+		return nil, err
+	}
+
+	dynamodbKvstoreFs, err := dynamodbKvstoreFixtureSet(ctx, config, logger)
+	if err != nil {
+		return nil, err
+	}
+
+	redisFs, err := redisFixtureSet(ctx, config, logger)
+	if err != nil {
+		return nil, err
+	}
+
+	dynamodbFs, err := dynamodbFixtureSet(ctx, config, logger)
+	if err != nil {
+		return nil, err
+	}
+
+	blobFs, err := blobFixtureSet(ctx, config, logger)
+	if err != nil {
+		return nil, err
+	}
+
+	return []fixtures.FixtureSet{
+		mysqlOrmFs,
+		mysqlPlainFs,
+		dynamodbKvstoreFs,
+		redisFs,
+		dynamodbFs,
+		blobFs,
+	}, nil
 }
 ```
 
 ## Named Fixtures
-In case you want to reuse your fixtures values for assertions or additional processing, you can load them by name when using `fixtures.NamedFixtureSets`:
+With named fixtures you can create some fixtures and in future fixtures refer to the already created ones, e.g. for referencing (auto numbered) IDs:
 
 [embedmd]:# (../../examples/fixtures/simple/named/main.go /func main/ $)
 ```go
-func main() {
-	// store named fixtures
-	namedFixtures := &namedFixtureBuilder{}
+type DynamoDbExampleModel struct {
+	Name  string `ddb:"key=hash"`
+	Value string `ddb:"global=hash"`
+}
 
+var namedFixtures = fixtures.NamedFixtures[*DynamoDbExampleModel]{
+	{
+		Name:  "test",
+		Value: &DynamoDbExampleModel{Name: "Some Name", Value: "Some Value"},
+	},
+}
+
+func fixtureSetsFactory(ctx context.Context, config cfg.Config, logger log.Logger) ([]fixtures.FixtureSet, error) {
+	mysqlWriter, err := fixtures.NewMysqlOrmFixtureWriter(ctx, config, logger, &db_repo.Metadata{
+		ModelId: mdl.ModelId{
+			Name: "orm_named_fixture_example",
+		},
+	})
+	if err != nil {
+		return nil, fmt.Errorf("failed to create orm fixture writer: %w", err)
+	}
+
+	return []fixtures.FixtureSet{
+		fixtures.NewSimpleFixtureSet(namedFixtures, mysqlWriter),
+	}, nil
+}
+
+func main() {
 	app := application.Default(
-		application.WithFixtureBuilderFactory(fixtures.SimpleFixtureBuilderFactory(namedFixtures.Fixtures())),
+		application.WithFixtureSetFactory(fixtureSetsFactory),
 	)
 
 	app.Run()
 
 	// then you can access them later
-	fx := namedFixtures.GetNamed("test")
+	fx := namedFixtures.GetValueByName("test")
 	_ = fx.Value
-}
-
-type namedFixtureBuilder struct {
-	fixtures fixtures.NamedFixtureSet
-}
-
-func (b *namedFixtureBuilder) Fixtures() []*fixtures.FixtureSet {
-	b.fixtures = fixtures.NamedFixtureSet{
-		{
-			Name:  "test",
-			Value: &DynamoDbExampleModel{Name: "Some Name", Value: "Some Value"},
-		},
-	}
-
-	return []*fixtures.FixtureSet{
-		{
-			Enabled: true,
-			Purge:   false,
-			Writer: fixtures.MysqlOrmFixtureWriterFactory(&db_repo.Metadata{
-				ModelId: mdl.ModelId{
-					Name: "orm_named_fixture_example",
-				},
-			}),
-			Fixtures: b.fixtures.All(),
-		},
-	}
-}
-
-// GetNamed Add properly typed getter
-func (b *namedFixtureBuilder) GetNamed(name string) *DynamoDbExampleModel {
-	return b.fixtures.GetValueByName(name).(*DynamoDbExampleModel)
 }
 ```
 
 ## Further Information
 * Existing fixtures will be updated instead of created.
 * When purge is enabled only the destination of the fixtures will be purged, not everything. That means for example while loading MySQL Fixtures with purge only the tables will be purged not the whole database.
-* If you want to use the `MysqlOrmFixtureWriterFactory` make sure that your fixture struct embeds `db_repo.Model`
-* For example usage of all `FixtureWriterFactory` see the `/examples/gosoline-fixture-loading` directory
+* If you want to use the MySQL ORM based implementation make sure that your fixture struct embeds `db_repo.Model`
