--- a/docs/docs/reference/package-cloud_aws.mdx
+++ b/docs/docs/reference/package-cloud_aws.mdx
@@ -28,27 +28,36 @@ cloud:
         serviceX:
             clients:
                 default: # name of the client
-                    endpoint: "http://localhost:4566"
-                    region: "eu-central-1"
-                    http_client:
-                        timeout: 0s
+                    assume_role: ""
                     backoff:
-                        cancel_delay: 1s
+                        cancel_delay: 0s
                         initial_interval: 50ms
                         max_attempts: 10
-                        max_elapsed_time: 15m0s
+                        max_elapsed_time: 10m0s
                         max_interval: 10s
+                    credentials:
+                        access_key_id: justtrack
+                        secret_access_key: justtrack
+                        session_token: ""
+                    endpoint: http://localhost:4566
+                    http_client:
+                        timeout: 0s
+                    profile: ""
+                    region: eu-central-1
+
 ```
 | Setting                  | Description                                                                        | Default                       |
 |--------------------------|------------------------------------------------------------------------------------|-------------------------------|
-| endpoint                 | Which service endpoint should be called                                            | http://localhost:4566         |
-| region                   | The region in use                                                                  | eu-central-1                  |
-| http_client.timeout      | After what duration the request should be canceled, if the server doesn't respond | 0s (no timeout)               |
+| assume_role              | If defined, this role will be used to gain access                                  | ""                            |
 | backoff.cancel_delay     | If the request get canceled, how long should the cancel delayed                    | 1s                            |
 | backoff.initial_interval | The initial duration to wait before retrying the request on error                  | 50ms                          |
 | backoff.max_attempts     | How many attempts should be done                                                   | 10 (0 means retry forever)    |
 | backoff.max_interval     | Max duration between 2 calls when retrying                                         | 10s                           |
 | backoff.max_elapsed_time | For how long the service should retry the request                                  | 10m (0m means retry forever)  |
+| endpoint                 | Which service endpoint should be called                                            | http://localhost:4566         |
+| http_client.timeout      | After what duration the request should be canceled, if the server doesn't respond  | 0s (no timeout)               |
+| profile                  | If defined, this aws profile will be used to fetch credentials                     | ""                            |
+| region                   | The region in use                                                                  | eu-central-1                  |
 
 ### Cloudwatch
 Call
@@ -67,16 +76,23 @@ cloud:
         cloudwatch:
             clients:
                 default:
-                    endpoint: "http://localhost:4566"
-                    region: "eu-central-1"
-                    http_client:
-                      timeout: 0s
+                    assume_role: ""
                     backoff:
-                      cancel_delay: 1s
-                      initial_interval: 50ms
-                      max_attempts: 10
-                      max_elapsed_time: 15m0s
-                      max_interval: 10s
+                        cancel_delay: 0s
+                        initial_interval: 50ms
+                        max_attempts: 10
+                        max_elapsed_time: 10m0s
+                        max_interval: 10s
+                    credentials:
+                        access_key_id: justtrack
+                        secret_access_key: justtrack
+                        session_token: ""
+                    endpoint: http://localhost:4566
+                    http_client:
+                        timeout: 0s
+                    profile: ""
+                    region: eu-central-1
+
 ```
 These are the default values which are used if you don't provide any config by yourself.
 
@@ -84,16 +100,24 @@ These are the default values which are used if you don't provide any config by y
 ```yaml
 cloud:
   aws:
-    credentials:
-      access_key_id: "*******************"
-      secret_access_key: "****************************************"
-      session_token: "********************************************************************"
     defaults:
+      assume_role: "arn:aws:iam::123456789012:role/gosoline-test-role"
+      credentials:
+        access_key_id: "justtrack"
+        secret_access_key: "justtrack"
+        session_token: "justtrack"
+      profile: "sdlc-dev-account"
+      endpoint: "http://localhost:4566"
       region: "eu-central-1"
-      endpoint: ""
     cloudwatch:
       clients:
         default:
+          assume_role: "arn:aws:iam::123456789012:role/gosoline-test-role"
+          credentials:
+            access_key_id: "justtrack"
+            secret_access_key: "justtrack"
+            session_token: "justtrack"
+          profile: "sdlc-dev-account"
           endpoint: "http://localhost:4566"
           region: "eu-central-1"
           http_client:
