cloud/aws: allow defaults for a client for all service to be bundled;
Until now, one could specify settings for all clients below
`cloud.aws.defaults`. Defaults for a specific client could be specified
below `cloud.aws.<service>.clients.<clientName>`. However, you couldn't
specify settings for a client name valid for all services (like backoff
settings). It is now possible to specify those below
`cloud.aws.defaults.clients.<clientName>`.

Additionally, the Kinesis output was using two levels of retry with
different settings in the past: On a request level, we would say send 50
messages with the retry/backoff settings from the AWS client. Kinesis
could produce a successful response telling us that 10 messages were
still rejected. However, we couldn't retry on the AWS level as we needed
to build a new request containing only those 10 messages. This
previously used just the default backoff settings (specified below the
`exec` key), so even if AWS was configured to retry infinitely, the
default setting might tell it to only retry a few times (for example,
because the service running this was an API service). This is now
changed and the kinesis output uses the AWS settings on both levels of
retries.

--- a/docs/docs/reference/package-cloud_aws.mdx
+++ b/docs/docs/reference/package-cloud_aws.mdx
@@ -96,6 +96,74 @@ cloud:
 ```
 These are the default values which are used if you don't provide any config by yourself.
 
+### Different Client Names
+You can specify different client names to customize specific fields for a
+particular client while inheriting the rest of the configuration. For example:
+
+```yaml
+cloud:
+  aws:
+    dynamodb:
+      clients:
+        someClientName:
+          naming:
+            pattern: "{env}-{group}-{modelId}"
+```
+
+The configuration for a specific client name (e.g., `someClientName`) is resolved by merging settings in the following order of precedence:
+
+1. **Client-specific settings for the given service** (e.g., `cloud.aws.dynamodb.clients.someClientName`)
+2. **Client-specific settings from the defaults** (e.g., `cloud.aws.defaults.clients.someClientName`)
+3. **Service-wide default settings for the given service** (e.g., `cloud.aws.dynamodb.clients.default`)
+4. **Global defaults for all clients** (e.g., `cloud.aws.defaults.clients.default`)
+5. **Global defaults for all AWS clients** (e.g., `cloud.aws.defaults`)
+
+For example, if you specify:
+
+```yaml
+cloud:
+  aws:
+    defaults:
+      region: "eu-west-1"
+      credentials:
+        access_key_id: "default-access-key"
+        secret_access_key: "default-secret"
+      clients:
+        default:
+          region: "eu-west-2"
+        clientWithoutEnvInName:
+          backoff:
+            type: infinite
+    dynamodb:
+      clients:
+        default:
+          region: "eu-central-1"
+          naming:
+            pattern: "{env}-{group}-{modelId}"
+        clientWithoutEnvInName:
+          naming:
+            pattern: "{group}-{modelId}"
+    sqs:
+      clients:
+        clientWithoutEnvInName:
+          naming:
+            pattern: "{group}-{queueId}"
+```
+
+Then, the dynamodb client `clientWithoutEnvInName` will use:
+
+- **`region`**: `eu-central-1` (from `cloud.aws.dynamodb.clients.default` since `region` is not explicitly set for `clientWithoutEnvInName`).
+- **`naming.pattern`**: `{group}-{modelId}` (from `cloud.aws.dynamodb.clients.clientWithoutEnvInName`).
+- **`credentials`**: `default-access-key` and `default-secret` (from `cloud.aws.defaults`).
+- **`backoff.type`**: `infinite` (from `cloud.aws.defaults.clientWithoutEnvInName`).
+
+The sqs client `clientWithoutEnvInName` will use:
+
+- **`region`**: `eu-west-2` (from `cloud.aws.defaults.clients.default` since `region` is not explicitly set for `clientWithoutEnvInName`).
+- **`naming.pattern`**: `{group}-{queueId}` (from `cloud.aws.sqs.clients.clientWithoutEnvInName`).
+- **`credentials`**: `default-access-key` and `default-secret` (from `cloud.aws.defaults`).
+- **`backoff.type`**: `infinite` (from `cloud.aws.defaults.clientWithoutEnvInName`).
+
 ### Full reference
 ```yaml
 cloud:
@@ -133,7 +201,6 @@ cloud:
         default:
           naming:
             pattern: "{env}-{group}-{modelId}"
-
     kinesis:
       clients:
         default:
